<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.asketmc</groupId>
  <artifactId>amctimber</artifactId>
  <version>1.0.6</version>
  <packaging>jar</packaging>
  <name>AMCTimber</name>
  <description>Valheim-style tree felling: chop a tree's base and the whole tree topples, then re-chop the felled trunk for logs.</description>
  <url>https://github.com/asketmc/AMCTimber</url>

  <licenses>
    <license>
      <name>GNU General Public License v3.0</name>
      <url>https://www.gnu.org/licenses/gpl-3.0.txt</url>
    </license>
  </licenses>

  <properties>
    <maven.compiler.release>21</maven.compiler.release>
    <maven.compiler.proc>none</maven.compiler.proc>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <jacoco.version>0.8.15</jacoco.version>
    <pitest.version>1.25.7</pitest.version>
    <pitest.junit5.plugin.version>1.2.3</pitest.junit5.plugin.version>
    <coverage.line.minimum>0.80</coverage.line.minimum>
    <coverage.branch.minimum>0.70</coverage.branch.minimum>
    <mutation.threshold>70</mutation.threshold>
    <mutation.coverage.threshold>80</mutation.coverage.threshold>
    <!-- Compiled against the OLDEST supported API so one jar runs 1.20.6 -> 1.21.x.
         Version-specific symbols (new particles/materials) are resolved by name at runtime. -->
    <paper.version>1.20.6-R0.1-SNAPSHOT</paper.version>
  </properties>

  <repositories>
    <repository><id>papermc</id><url>https://repo.papermc.io/repository/maven-public/</url></repository>
    <repository><id>enginehub</id><url>https://maven.enginehub.org/repo/</url></repository>
    <repository><id>glaremasters</id><url>https://repo.glaremasters.me/repository/towny/</url></repository>
  </repositories>

  <dependencies>
    <!-- Paper API is provided by the server at runtime. Compile against the oldest supported API. -->
    <dependency>
      <groupId>io.papermc.paper</groupId>
      <artifactId>paper-api</artifactId>
      <version>${paper.version}</version>
      <scope>provided</scope>
    </dependency>

    <!-- JOML (3D math) ships with the server (Paper bundles it since 1.19.4) — provided, never shaded.
         Keep this on the older 1.10.x baseline so AMCTimber does not accidentally compile against JOML
         methods unavailable on the oldest supported Paper 1.20.x runtime. -->
    <dependency>
      <groupId>org.joml</groupId>
      <artifactId>joml</artifactId>
      <version>1.10.5</version>
      <scope>provided</scope>
    </dependency>

    <!-- Optional, soft protection integrations. provided scope keeps them (and their transitives) OUT of
         our jar; every call is guarded so the plugin loads and runs when they are absent. Hook errors use
         the explicit protection-error-policy, which defaults to deny.
         Keep compile-time APIs on the older supported baseline to preserve Paper 1.20.x server stacks.
         worldguard-bukkit pulls worldguard-core + worldedit transitively, where the bridge's classes live. -->
    <dependency>
      <groupId>com.sk89q.worldguard</groupId>
      <artifactId>worldguard-bukkit</artifactId>
      <version>7.0.9</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.palmergames.bukkit.towny</groupId>
      <artifactId>towny</artifactId>
      <version>0.100.1.0</version>
      <scope>provided</scope>
    </dependency>

    <!-- Unit tests (JUnit 5). Server-free pure-logic tests; run in CI via `mvn test`. -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>6.1.1</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <finalName>AMCTimber-${project.version}</finalName>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.4.1</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.6</version>
        <executions>
          <execution>
            <id>p0-tests</id>
            <phase>verify</phase>
            <goals>
              <goal>test</goal>
            </goals>
            <configuration>
              <groups>P0</groups>
              <reportsDirectory>${project.build.directory}/surefire-p0-reports</reportsDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${jacoco.version}</version>
        <executions>
          <execution>
            <id>prepare-agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>report</id>
            <phase>verify</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
          <execution>
            <id>check</id>
            <phase>verify</phase>
            <goals>
              <goal>check</goal>
            </goals>
            <configuration>
              <rules>
                <rule>
                  <element>BUNDLE</element>
                  <includes>
                    <include>com.asketmc.timber.TimberConfig</include>
                    <include>com.asketmc.timber.Tools</include>
                    <include>com.asketmc.timber.FellLifecycle</include>
                    <include>com.asketmc.timber.EntityBudget</include>
                    <include>com.asketmc.timber.YieldLedger</include>
                  </includes>
                  <limits>
                    <limit>
                      <counter>LINE</counter>
                      <value>COVEREDRATIO</value>
                      <minimum>${coverage.line.minimum}</minimum>
                    </limit>
                    <limit>
                      <counter>BRANCH</counter>
                      <value>COVEREDRATIO</value>
                      <minimum>${coverage.branch.minimum}</minimum>
                    </limit>
                  </limits>
                </rule>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.pitest</groupId>
        <artifactId>pitest-maven</artifactId>
        <version>${pitest.version}</version>
        <configuration>
          <targetClasses>
            <param>com.asketmc.timber.TimberConfig</param>
            <param>com.asketmc.timber.Tools</param>
          </targetClasses>
          <targetTests>
            <param>com.asketmc.timber.TimberConfigTest</param>
            <param>com.asketmc.timber.ToolsTest</param>
          </targetTests>
          <mutationThreshold>${mutation.threshold}</mutationThreshold>
          <coverageThreshold>${mutation.coverage.threshold}</coverageThreshold>
          <outputFormats>
            <param>HTML</param>
            <param>XML</param>
          </outputFormats>
          <timestampedReports>false</timestampedReports>
        </configuration>
        <executions>
          <execution>
            <id>mutation-tests</id>
            <phase>verify</phase>
            <goals>
              <goal>mutationCoverage</goal>
            </goals>
          </execution>
        </executions>
        <dependencies>
          <dependency>
            <groupId>org.pitest</groupId>
            <artifactId>pitest-junit5-plugin</artifactId>
            <version>${pitest.junit5.plugin.version}</version>
          </dependency>
        </dependencies>
      </plugin>
    </plugins>
  </build>
</project>
